[package]
name = "tls-rustls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.20.7", features = ["dangerous_configuration"]}
custom-utils = { version = "0.10.11", features = ["tls"]}
anyhow = "1.0.66"
tokio = { version ="1.21.2", features = ["net", "macros", "rt-multi-thread"]}


